--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <footer>
         <div class="questions">
-            Questions? Call 000-800-919-1694
+            Questions? Call 000-xxx-xxx-xxxx
         </div>
         <div class="footer">
             <div class="footer-item"> 
